fixing backgrounds overflow

--- a/src/styles/components/_sidePanel.scss
+++ b/src/styles/components/_sidePanel.scss
@@ -236,6 +236,8 @@
             @include visible;
             left: var(--side-panel-width);
         }
+        overflow-y: scroll;
+        overflow-x: hidden;
         .tab{
             @include hidden; 
             display: flex;
